<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:weightSum="100"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="36.5"
        android:background="@android:color/black"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/math_expression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12.7"
        android:background="@android:color/black"
        android:orientation="horizontal"
        android:padding="4dp"
        >


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ac"
            android:text="@string/ac"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_grey"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_plus_minus"
            android:text="@string/plus_minus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_grey"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_percent"
            android:text="@string/percent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_grey"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_division"
            android:text="@string/division"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_orange"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12.7"
        android:background="@android:color/black"
        android:orientation="horizontal"
        android:padding="4dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_seven"
            android:text="@string/seven"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_black"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_eight"
            android:text="@string/eight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_black"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_nine"
            android:text="@string/nine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_black"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_multiplication"
            android:text="@string/multiplication"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_orange"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12.7"
        android:background="@android:color/black"
        android:orientation="horizontal"
        android:padding="4dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_four"
            android:text="@string/four"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_black"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_five"
            android:text="@string/five"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_black"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_six"
            android:text="@string/six"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_black"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_minus"
            android:text="@string/minus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_orange"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12.7"
        android:background="@android:color/black"
        android:orientation="horizontal"
        android:padding="4dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_one"
            android:text="@string/one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_black"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_two"
            android:text="@string/two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_black"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_three"
            android:text="@string/three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_black"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_plus"
            android:text="@string/plus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_orange"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12.7"
        android:background="@android:color/black"
        android:orientation="horizontal"
        android:padding="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/black"
            android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_zero"
            android:text="@string/zero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_zero"
            android:textColor="@color/white"
            android:paddingRight="90dp"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="0.5"
            android:background="@android:color/black"
            android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_comma"
            android:text="@string/comma"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_black"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_equal"
            android:text="@string/equal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size"
            android:layout_weight="1"
            android:background="@drawable/button_orange"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:fontFamily="@font/san_f"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>